[package]
name = "rubbl-rxpackage"
version = "0.1.4"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[dependencies]
byteorder = "^1.1"
clap = "^2.26"
failure = "^0.1"
failure_derive = "^0.1"
itertools = "^0.10"
ndarray = "^0.15"
nom = "^5"
num-traits = "^0.2"
pbr = "^1.0"
rubbl_casatables = "^0.3"
rubbl_core = "^0.2"
