[package]
name = "rubbl-rxpackage"
version = "0.1.6"
authors = ["Peter Williams <peter@newton.cx>"]
edition = "2018"

[dependencies]
byteorder = "^1.1"
clap = { version = "^4", features = ["cargo"] }
itertools = "^0.14"
ndarray = "^0.16"
nom = "^5"
num-traits = "^0.2"
pbr = "^1.0"
rubbl_casatables = "^0.9"
rubbl_core = { version = "^0.5", features = ["anyhow", "notifications"] }
thiserror = "2.0.12"
